other files from repl.it

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Title Goes Here</title>
-    <script src="try_catch.js"></script>
+    <script src="regexpressions.js"></script>
 </head>
 
 <body>
