--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8">
     <title>Title Goes Here</title>
-    <script src="regexpressions.js"></script>
+    <script src="require.js"></script>
+    <script src="Modules.js"></script>
+    <script type="module">
+        import ordinal from './node_modules/ordinal';
+    </script>
 </head>
 
 <body>
